--- a/.github/workflows/news-ci-dev.yml
+++ b/.github/workflows/news-ci-dev.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - develop
+    paths:
+      - "services/news/*"
 
 jobs:
   primary:
@@ -18,7 +20,7 @@ jobs:
       - name: install dependencies
         run: yarn install
       - name: serverless deploy
-        run: npx serverless deploy
+        run: npx serverless deploy --stage dev
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
