--- a/package.json
+++ b/package.json
@@ -1,22 +1,11 @@
 {
   "name": "sls-typescript-github-action",
   "version": "1.0.0",
-  "description": "Serverless webpack example using Typescript",
-  "main": "handler.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "source-map-support": "^0.5.10"
-  },
-  "devDependencies": {
-    "@types/aws-lambda": "^8.10.17",
-    "@types/node": "^10.12.18",
-    "serverless-webpack": "^5.2.0",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.2.4",
-    "webpack": "^4.29.0"
-  },
-  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  "description": "serverless typescript monorepo with github actions",
+  "main": "index.js",
+  "repository": "git@github.com:Brossco85/sls-typescript-github-action.git",
+  "author": "Bobby <bobby.dev@pm.me>",
+  "license": "MIT",
+  "private": true,
+  "workspaces": ["services/*"]
 }
